<b><u> v2.07, 02.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Add a new Heal Layout to the install process (WIP). Inspired by insertuseralias.
<font color=#FF8C00>&#9830;</font> Install: Adjust the ActionBar Layout for DPS-Layout.
<font color=#FF8C00>&#9830;</font> Install: Adjust new SLE settings. (Required SLE v.3.09)
<font color=#FF8C00>&#9830;</font> QuestTracker: Color the Quest by difficulty.
<font color=#FF8C00>&#9830;</font> QuestTracker: Style the progress bar for Bonus Objectives.
<font color=#FF8C00>&#9830;</font> Added more Roboto fonts. Use Merathilis-Roboto-Medium for chat.
<font color=#FF8C00>&#9830;</font> LocPanel: Added option for Auto Width. Change width based on the zone name length.

<b><u> v2.06, 30.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add a LocationPanel. All credits belong to Darth Predator (Shadow&Light).
<font color=#FF8C00>&#9830;</font> Add a Achievement status in tooltip. Based on Enhanced Achievements.
<font color=#FF8C00>&#9830;</font> Code cleanup.
<font color=#FF8C00>&#9830;</font> Changed specswitch datatext to change spec immediately, no need for a popup.

<b><u> v2.05, 29.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Fix Datatexts if ElvUI_SLE is enabled.
<font color=#FF8C00>&#9830;</font> Misc: Attempt to fix a weird nil error.
<font color=#FF8C00>&#9830;</font> Skins: Add quest level to the ObjectiveTracker.

<b><u> v2.04, 28.07.2016</b></u>
<font color=#FF8C00>&#9830;</font> Add an inGame Changelog (thx Blazeflack for helping me).
<font color=#FF8C00>&#9830;</font> Install: Enable AB3 + 5 better safe than sorry.
<font color=#FF8C00>&#9830;</font> Install: Change the goldformat to 'CONDENSED'.
<font color=#FF8C00>&#9830;</font> Install: Switch Datatext position of S&L Currency + MUI System.
<font color=#FF8C00>&#9830;</font> Remove fix for blank tooltip. Part of ElvUI now.
<font color=#FF8C00>&#9830;</font> Skins: Update quest skin.

<b><u> v2.03, 25.07.2016</b></u>