@@ -1,3 +1,6 @@
+** v2.08, xx.08.2016**
+* Add tabs for professions on the TradeSkill Frame.
+
 ** v2.07, 02.08.2016**
 * Install: Add a new Heal Layout to the install process (WIP). Inspired by insertuseralias.
 * Install: Adjust the ActionBar Layout for DPS-Layout.
